# valuing_alternative_work_arrangements

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
paper/: alternative_work_arrangements.tex  alternative_work_arrangements.toc  refs.bib  task_paper.py  valuing_alternative_work_arrangements.tex  valuing_alternative_work_arrangements_pres.tex
src/valuing_alternative_work_arrangements/: config.py
src/valuing_alternative_work_arrangements/analysis/: 1_main_tables.py  breakpoint_program.py  fig_setup.py  main_tables.py  mle_programs.py  task_analysis.py  task_fig_setup.py  task_main_tables.py
src/valuing_alternative_work_arrangements/data_management/: __init__.py  clean_data.py  import_and_create_data.py  task_clean_data.py  task_data_management.py
src/valuing_alternative_work_arrangements/final/: __init__.py  task_fig_setup.py  task_final.py
tests/analysis/: test_mle_programs.py  test_model.py  test_predict.py  test_table_6.py  test_wtp_tables.py
tests/data_management/: test_clean_data.py
