[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]


[tool.setuptools_scm]
write_to = "src/valuing_alternative_work_arrangements/_version.py"

[tool.pytask.ini_options]
paths = ["./src/valuing_alternative_work_arrangements", "./paper"]
infer_latex_dependencies = true
