[metadata]
name = valuing_alternative_work_arrangements
description = A project with pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/mtrihoang/valuing_alternative_work_arrangements
author = Minh Tri Hoang
author_email = tri.hoang@uni-bonn.de
license = Not open source
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Changelog = https://github.com/mtrihoang/valuing_alternative_work_arrangements
    Documentation = hhttps://github.com/mtrihoang/valuing_alternative_work_arrangements
    Github = https://github.com/mtrihoang/valuing_alternative_work_arrangements
    Tracker = https://github.com/mtrihoang/valuing_alternative_work_arrangements/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/valuing_alternative_work_arrangements/_version.py
